k8s/overlays/aws/patch-api-service-account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oficina-mecanica-api
  namespace: oficina-mecanica
spec:
  template:
    spec:
      serviceAccountName: oficina-mecanica-api
