k8s/overlays/aws/patch-delete-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: oficina-mecanica
$patch: delete
