k8s/overlays/aws/patch-api-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-mecanica-api
  namespace: oficina-mecanica
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8000
      targetPort: http
