k8s/overlays/aws/patch-delete-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: oficina-mecanica
$patch: delete
