k8s/overlays/aws/patch-delete-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: oficina-mecanica
$patch: delete
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: oficina-mecanica
$patch: delete
